k8s/01-namespace.yml
apiVersion:v1
kind: Namespace
metadata:
    name: ecommerce
    labels:
      name: ecommerce
    environment: production
