k8s/09-ecommerce-service.yml
apiVersion:v1
kind: Service
metadata: 
  name: ecommerce
  namespace: ecommerce
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 3000
  selector:
    app: easyshop
